* Support added for image/webp type image upload - ADDED
* GD Pages shows blank content when page not setup with Divi page builder - FIXED
* Not able to setup GD search page with Divi page builder - FIXED
* Individual word search limit shows unexpected results - FIXED
* MightyMag theme compatibility for GD pages - ADDED
* Sticky map not working with OpenStreetMap - FIXED

= 2.0.0.62 =
* GD Archive pages not rendering shortcodes when Elementor is active - FIXED
* Ratings in listing view should be on its own line if placed after a gd_post_badge - CHANGED
* Location filter enabled on location page default content gd_listings - CHANGED
* Default view for archive page on install changed to Grid view 2 - CHANGED

= 2.0.0.61 =
* Polifill for CSS object-fit in browsers that don't support it - Added
* Prevent saving custom fields found in array of standard fields - ADDED
* Optional Address line 2 field added, can be enabled under address field - ADDED
* Classifieds dummy content - ADDED
* "Kingstudio" theme compatibility for gd pages sidebar - ADDED
* Frontend edit post screen now shows restricted message if not allowed to edit - ADDED
* Translation for "May" month abbreviation shows incorrect date - FIXED
* 404 rescue setting not working for translated CPT slug - FIXED
* Changed external API for IP to location to a more reliable one - CHANGED
* WP Country Database lib updated to 1.0.3 - CHANGED
* Customizr Pro theme does not locates the GD templates - FIXED
* Genesis theme pagination conflicts with GD Listings pagination on mobile devices - FIXED
* Allow to reset the custom field value of the select box - ADDED
* Elementor content not used for archive item template - FIXED
* Yoast breadcrumbs not showing category on GD category pages - FIXED
* Post Address widget sometimes not showing the neighbourhood - FIXED
* GeneratePress theme page layout compatibility - ADDED
* Removed "other emails" settings section which is no longer in use - REMOVED