@@ -8,6 +8,7 @@
 * Individual word search limit shows unexpected results - FIXED
 * MightyMag theme compatibility for GD pages - ADDED
 * Sticky map not working with OpenStreetMap - FIXED
+* Add listing tags not showing popular tags at top of the list - FIXED
 
 = 2.0.0.62 =
 * GD Archive pages not rendering shortcodes when Elementor is active - FIXED
